2005-02-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/VTKTestWriteSeq.cxx : add a VTK test to write sequences

2005-02-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ : accelerate tests (it's not very significant accelerations).
     Remove TestCopyDicom that is redundant with TestCopyRescaleDicom

2005-02-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestSequence.cxx : add test for sequences of images... test that
     we have the same serie or the same study UID

2005-02-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/gdcm.i : bug fix. Now string are correctly converted in python
     string type
   * src/gdcmDict.h : remove commented code
   * src/gdcmDocument.cxx : initialize values
   * src/gdcmFile.cxx : bug fix when reading values
   * gdcmPython/demo/ : change file names. Remove useless files

2005-02-04 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.cxx : remove the default array of initialization.
     The static array contained pointers to non-static values (comming from
     strings). To have coherences, when creating files, these values can't be
     static. So, the array can't be static, too ! To simplify, the array have
     been replaced by repeted lines to insert values in the File

2005-02-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmBinEntry.cxx : bug fix for BIG_ENDIAN part when writing the content
   * gdcmPython/gdcm.i : rename gdcmHeader to gdcmHelper

2005-02-02 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * FIX SQItem::AddEntry inserts now *in the right place* any Entry
              (Dicom Element) into the Sequence Item

2005-01-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/*.cxx : first parss to normalize file organisation

2005-01-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDirList.[h|cxx] : add method to find a directory